# flashpoint

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  skills-lock.json
.github/workflows/: release.yml
editors/vscode/: README.md  extension.js  package.json  setup.js
npm/: install.js
src/: diff.rs  hook.rs  ids.rs  log.rs  main.rs  meta.rs  porcelain.rs  repo.rs  safezone.rs  setup.rs  timeline.rs  timetravel.rs
