[package]
name = "flashpoint"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/manfad/flashpoint"
description = "Checkpoints for AI-agent coding sessions: anchor, timetravel, and let reality fork"

[[bin]]
name = "fp"
path = "src/main.rs"

[dependencies]
# Pinned exactly: jj-lib has no API stability guarantees (see README "Known risks").
jj-lib = "=0.43.0"
pollster = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
futures = "0.3"
globset = "0.4"
dialoguer = "0.11"
